[tool.poetry]
name = "nnml"
version = "0.1.0"
description = "Neural networks and machine learning library"
authors = ["Ayan Das <bvits@riseup.net>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "nnml" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 88
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"